--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ h3 {
 input {
     width: 99%;
     height: 90%;
-    padding: 15 15px;
+    padding: 2px 2px 2px;
     border-radius: 2px;
     border: 2px solid #999;
 }
@@ -46,7 +46,7 @@ a:active {
     flex-wrap: wrap;
     word-break: break-all;
 }
-.header {
+header {
     width: 100%;
     text-align: center;
     vertical-align: middle;
@@ -54,7 +54,7 @@ a:active {
     background-color: #041e42;
     color: #fff;
 }
-.footer {
+footer {
     width: 100%;
     text-align: center;
     vertical-align: middle;
@@ -63,48 +63,20 @@ a:active {
     background-color: #041e42;
     color: #fff;
 }
-.nav {
+nav {
     width: 100%;
     margin-bottom: 1%;
     padding: 10px 0 0 10px;
 }
-.aside {
+aside {
     background-color: #63666A;
     height: calc(100vh - 60px);
     width: 30%;
     overflow-wrap: break-word;
 }
-.filter {
+filter {
     width: 100%;
 }
 #map {
     width: 70%;
-}
-#quote-container {
-    width: 100%;
-    height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    overflow-wrap: break-word;
-}
-#quote {
-    color: white;
-    font-size: 1em;
-    width: 500px;
-    text-align: center;
-    text-shadow: 2px 2px black;
-}
-#author {
-    font-family: 'Roboto';
-    color: white;
-    font-size: 1em;
-    font-weight: 300;
-    margin-top: 20px;
-    text-shadow: 2px 2px black;
-    b {
-        font-weight: 900;
-    }
-}
 }
